# essentials-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu.yml  windows.yml
cmake/: FindTBB.cmake  TBB.cmake
include/: datastructs.hxx  load.hxx  operators.hxx  sssp.hxx  validate.hxx
src/: sssp.cpp
workflows/: ubuntu.yml
